added reports to dashboard pages

--- a/_posts/2015-08-20-dashboard-index.html
+++ b/_posts/2015-08-20-dashboard-index.html
@@ -12,13 +12,13 @@ layout: langindex
 <div class="tipbox row">
     <p>
     	10 dashboard templates made with the free <a href="http://keen.github.io/dashboards/layouts/">Keen.io dashboard layouts</a> and embedded Plotly graphs.
-    </p>    
-    <p>
-    	Plotly recommends hosting dashboard web pages on Amazon Web Services (AWS).
     </p>     
     <p>
     	Read how <a href="https://plot.ly/products/enterprise/customer-stories/goji/">Goji Insurance</a> transformed their business with Plotly dashboards hosted privately on AWS.
-    </p>      
+    </p>   
+    <p>
+      Don't know HTML? Try <a href="http://dashboards.ly/">Dashboards.ly</a> - A free GUI for creating and hosting Keen.io and Plotly dashboards.
+    </p>        
 </div>
 <br>
 
