--- a/_posts/dashboards/2015-08-20-energy.html
+++ b/_posts/dashboards/2015-08-20-energy.html
@@ -6,6 +6,7 @@ permalink: dashboards/energy-monitoring/
 industry: Energy
 background_color: '#b2df8a'
 foreground_color: '#444'
+report_link: https://plot.ly/~Dreamshot/folder/Dreamshot:5820
 ---
 <!DOCTYPE html>
 <html>
@@ -113,7 +114,7 @@ foreground_color: '#444'
         <div class="chart-stage">
           <div id="grid-1-1">
             <div>
-              <iframe width="100%" height="480px" frameborder="0" scrolling="no" src="https://plot.ly/~jackp/12599.embed?link=true&modebar=false"></iframe>
+              <iframe width="100%" height="480px" frameborder="0" scrolling="no" src="https://plot.ly/~jackp/12599.embed?link=false&modebar=false"></iframe>
             </div>
           </div>
         </div>
@@ -129,7 +130,7 @@ foreground_color: '#444'
           Frequency (in days) of yearly wind direction
         </div>
         <div class="chart-stage">
-          <iframe width="100%" height="480px" frameborder="0" scrolling="no" src="https://plot.ly/~jackp/12640?link=true&modebar=false"></iframe>
+          <iframe width="100%" height="480px" frameborder="0" scrolling="no" src="https://plot.ly/~jackp/12640?link=false&modebar=false"></iframe>
         </div>
         <div class="chart-notes">
           <a href="https://plot.ly/12640/~jackp"><i class="icon-edit"></i> Copy & Edit</a>
@@ -148,7 +149,7 @@ foreground_color: '#444'
         <div class="chart-stage">
           <div id="grid-1-1">
             <div>
-              <iframe width="100%" height="480px" frameborder="0" scrolling="no" src="https://plot.ly/~jackp/12614.embed?link=true&modebar=false"></iframe>
+              <iframe width="100%" height="480px" frameborder="0" scrolling="no" src="https://plot.ly/~jackp/12614.embed?link=false&modebar=false"></iframe>
             </div>
           </div>
         </div>
@@ -164,7 +165,7 @@ foreground_color: '#444'
           Number of turbine blades vs power output
         </div>
         <div class="chart-stage">
-                    <iframe width="100%" height="480px" frameborder="0" scrolling="no" src="https://plot.ly/~jackp/12620.embed?link=true&modebar=false"></iframe>
+                    <iframe width="100%" height="480px" frameborder="0" scrolling="no" src="https://plot.ly/~jackp/12620.embed?link=false&modebar=false"></iframe>
         </div>
         <div class="chart-notes">
           <a href="https://plot.ly/12620/~jackp"><i class="icon-edit"></i> Copy & Edit</a>
