--- a/_posts/dashboards/2015-08-20-insurance.html
+++ b/_posts/dashboards/2015-08-20-insurance.html
@@ -6,6 +6,7 @@ permalink: dashboards/insurance/
 industry: Insurance
 background_color: '#1f78b4'
 foreground_color: 'white'
+report_link: https://plot.ly/~Dreamshot/folder/Dreamshot:5782
 ---
 <!DOCTYPE html>
 <html>
