--- a/_posts/dashboards/2015-08-20-marketing.html
+++ b/_posts/dashboards/2015-08-20-marketing.html
@@ -6,6 +6,7 @@ permalink: dashboards/marketing-and-web-analytics-dashboard/
 industry: Marketing and Web Analytics
 background_color: '#fb9a99'
 foreground_color: '#444'
+report_link: https://plot.ly/~Dreamshot/folder/Dreamshot:5894
 ---
 <!DOCTYPE html>
 <html>
