--- a/_posts/dashboards/2015-08-20-sales.html
+++ b/_posts/dashboards/2015-08-20-sales.html
@@ -6,6 +6,7 @@ permalink: dashboards/sales/
 industry: Sales
 background_color: '#a6cee3'
 foreground_color: '#444'
+report_link: https://plot.ly/~Dreamshot/folder/Dreamshot:5770
 ---
 <!DOCTYPE html>
 <html>
