--- a/_posts/dashboards/2015-08-20-weather.html
+++ b/_posts/dashboards/2015-08-20-weather.html
@@ -6,6 +6,7 @@ permalink: dashboards/weather/
 industry: Weather
 background_color: 'rgb(31,158,137)'
 foreground_color: 'white'
+report_link: https://plot.ly/~Dreamshot/folder/Dreamshot:5838
 ---
 <!DOCTYPE html>
 <html>
