--- a/_posts/matlab/dashboard/2015-07-29-dashboard-index.html
+++ b/_posts/matlab/dashboard/2015-07-29-dashboard-index.html
@@ -10,6 +10,7 @@ page_type: example_index
 has_thumbnail: true
 display_as: chart_type
 order: 0
+report_link: https://plot.ly/~Dreamshot/folder/Dreamshot:6027
 ---
 <!DOCTYPE html>
 <html>
