--- a/_posts/2015-07-26-index.html
+++ b/_posts/2015-07-26-index.html
@@ -66,7 +66,7 @@ permalink: /api/
 					</div></a>
 					<a href="/r/getting-started/"><div class="two columns categories-apis" onmouseover="movingInImgOp(r_api_img, r_api_text)" onmouseout="movingOutImgOp(r_api_img, r_api_text)">
 						<div id="r_api_img">
-							<img src="{{site.staticurl}}/images/r-small.png" alt="R">
+							<img src="{{site.staticurl}}/images/r-small.png" alt="R" style="width:100px;">
 						</div>
 						<div id="r_api_text" class="titlecenterapi" style="display:none;">
 							<h6>Plotly R API</h6>
