--- a/_posts/plotly_js/config-options/2015-09-24-config-opt-showlink.html
+++ b/_posts/plotly_js/config-options/2015-09-24-config-opt-showlink.html
@@ -1,5 +1,5 @@
 ---
-name: Hiding your Plot's "Edit Chart" Link
+name: Hide "Edit Chart" Link
 plot_url: https://codepen.io/plotly/embed/epdjem/?height=399&theme-id=15263&default-tab=result
 language: plotly_js
 suite: configuration
