--- a/_posts/plotly_js/callbacks-zoom/2015-04-09-zoom_index.html
+++ b/_posts/plotly_js/callbacks-zoom/2015-04-09-zoom_index.html
@@ -12,5 +12,5 @@ display_as: chart_events
 order: 3
 redirect_from: javascript-graphing-library/zoom-events/
 ---
-{% assign examples = site.posts | where:"language","plotly_js" | where:"suite","hover-events" | sort: "order" %}
+{% assign examples = site.posts | where:"language","plotly_js" | where:"suite","zoom-events" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
