edit rounding hover ex

--- a/_posts/plotly_js/hover/2015-10-08-rounding-hover-values.html
+++ b/_posts/plotly_js/hover/2015-10-08-rounding-hover-values.html
@@ -1,14 +1,13 @@
 ---
-name: Rounding X & Y Hover Values
-plot_url: http://codepen.io/cldougl/embed/NGjZbR/?height=500&theme-id=15263&default-tab=result
+name: Rounding X and Y Hover Values
+plot_url: http://codepen.io/plotly/embed/GpEmOY/?height=500&theme-id=15263&default-tab=result
 language: plotly_js
 suite: hover
 order: 2
 sitemap: false
 arrangement: horizontal
 ---
-// Round x & y hover values by setting hoverformat 
-// in layout.xaxis and/or layout.yaxis
+// Round x and y hover values by setting hoverformat in layout.xaxis and/or layout.yaxis
 // using D3 number formatting ( https://github.com/mbostock/d3/wiki/Formatting )
 
 var N = 40,
