--- a/_posts/plotly_js/hover/2015-10-08-rounding-hover-values.html
+++ b/_posts/plotly_js/hover/2015-10-08-rounding-hover-values.html
@@ -1,6 +1,6 @@
 ---
 name: Rounding X and Y Hover Values
-plot_url: http://codepen.io/plotly/embed/GpEmOY/?height=500&theme-id=15263&default-tab=result
+plot_url: https://codepen.io/plotly/embed/GpEmOY/?height=500&theme-id=15263&default-tab=result
 language: plotly_js
 suite: hover
 order: 2
@@ -28,4 +28,4 @@ var N = 40,
         yaxis:{zeroline:false, hoverformat: '.2r', title: 'Rounded: 2 significant values on hover'}
      };
 
-Plotly.newPlot('DivEx', data, layout);
+Plotly.newPlot('myDiv', data, layout);
