--- a/_posts/plotly_js/hover/2015-04-09-hover-chart-basic.html
+++ b/_posts/plotly_js/hover/2015-04-09-hover-chart-basic.html
@@ -12,6 +12,7 @@ var data = [
     x: [0, 1, 2],
     y: [1, 3, 2],
     mode: 'markers',
+    marker: {size: 16}
     text: ['Text A', 'Text B', 'Text C'],
     type: 'scatter'
   }
