--- a/_posts/plotly_js/callbacks-hover/2015-04-09-hover-coupling.html
+++ b/_posts/plotly_js/callbacks-hover/2015-04-09-hover-coupling.html
@@ -1,12 +1,12 @@
 ---
-name: Coupled Hover Events
+name: Coupled Hover Events in Multiple Graphs
 plot_url: http://i.imgur.com/AkFMbPO.gif
 language: plotly_js
 suite: hover-events
 sitemap: false
 arrangement: horizontal
 height: 775
-order: 2
+order: 3
 ---
 <div>
 <p>Hover in one graph triggers a hover event in 3 other graphs.</p>
