--- a/_posts/plotly_js/hover/2015-04-09-hover-chart-basic.html
+++ b/_posts/plotly_js/hover/2015-04-09-hover-chart-basic.html
@@ -9,13 +9,14 @@ arrangement: horizontal
 ---
 var data = [
   {
-    x: [0, 1, 2],
-    y: [1, 3, 2],
+    x: [0, .5, 1, 1.5, 2],
+    y: [1, 3, 2, 4, 2],
     mode: 'markers',
-    marker: {size: 16}
-    text: ['Text A', 'Text B', 'Text C'],
+    marker: {size:16},
+    text: ['Text A', 'Text B', 'Text C', 'Text D', 'Text E'],
     type: 'scatter'
   }
+];
 ];
 var layout = {title: 'Hover over the points to see the text'};
 Plotly.newPlot('myDiv', data, layout);
