--- a/_posts/plotly_js/callbacks-hover/2015-10-08-hover-coupled.html
+++ b/_posts/plotly_js/callbacks-hover/2015-10-08-hover-coupled.html
@@ -1,9 +1,10 @@
 ---
 name: Coupled Hover Events on Single Plot
-plot_url: https://codepen.io/plotly/zvzdGb/oXadPM/?height=600&theme-id=15263&default-tab=result
+plot_url: https://codepen.io/plotly/embed/zvzdGb/?height=600&theme-id=15263&default-tab=result
 language: plotly_js
 suite: hover-events
 sitemap: false
+arrangement: horizontal
 order: 2
 ---
 var N = 12,
