tie it together with a plot call

--- a/_posts/2015-09-06-python-reference.html
+++ b/_posts/2015-09-06-python-reference.html
@@ -53,6 +53,7 @@ layout = go.Layout(             # all "layout" attributes: <a href="#layout">/py
 
 figure = Figure(data=data, layout=layout)
 
+py.plot(figure, filename='api-docs/reference-graph')</pre>
     </p>
     <hr>
 </div>
