true and false replacements

--- a/_posts/2015-08-19-plotly_js-reference.html
+++ b/_posts/2015-08-19-plotly_js-reference.html
@@ -57,6 +57,6 @@ layout = {                     // all "layout" attributes: <a href="#layout">#la
 {% assign object='object' %}
 {% assign 2darray='2D array' %}
 {% assign data_array='data array' %}
-{% include plotschema-reference.html quote=quote array=array arrays=arrays object=object 2darray=2darray data_array=data_array %}
-
-{% include plotschema-reference.html %}
+{% assign truestring='true' %}
+{% assign falsestring='false' %}
+{% include plotschema-reference.html quote=quote array=array arrays=arrays object=object 2darray=2darray data_array=data_array truestring=truestring falsestring=falsestring %}
