--- a/_posts/2015-09-06-python-reference.html
+++ b/_posts/2015-09-06-python-reference.html
@@ -64,6 +64,6 @@ py.plot(figure, filename='api-docs/reference-graph')</pre>
 {% assign object='dict' %}
 {% assign 2darray='2D list' %}
 {% assign data_array='data array' %}
-{% include plotschema-reference.html quote=quote array=array arrays=arrays object=object 2darray=2darray data_array=data_array %}
-
-{% include plotschema-reference.html %}
+{% assign truestring='True' %}
+{% assign falsestring='False' %}
+{% include plotschema-reference.html quote=quote array=array arrays=arrays object=object 2darray=2darray data_array=data_array truestring=truestring falsestring=falsestring %}
