--- a/_posts/2015-09-06-r-reference.html
+++ b/_posts/2015-09-06-r-reference.html
@@ -64,6 +64,6 @@ p &lt;- layout(p,              # all of layout's properties: <a href="#layout">/
 {% assign object='named list' %}
 {% assign 2darray='2D list' %}
 {% assign data_array='dataframe column, list, vector' %}
-{% include plotschema-reference.html quote=quote array=array arrays=arrays object=object 2darray=2darray data_array=data_array %}
-
-{% include plotschema-reference.html %}
+{% assign truestring='TRUE' %}
+{% assign falsestring='FALSE' %}
+{% include plotschema-reference.html quote=quote array=array arrays=arrays object=object 2darray=2darray data_array=data_array truestring=truestring falsestring=falsestring %}
