--- a/_posts/2015-09-09-matlab-reference.html
+++ b/_posts/2015-09-09-matlab-reference.html
@@ -87,6 +87,6 @@ ans =
 {% assign object='struct' %}
 {% assign 2darray='matrix' %}
 {% assign data_array='array' %}
-{% include plotschema-reference.html quote=quote array=array arrays=arrays object=object 2darray=2darray data_array=data_array %}
-
-{% include plotschema-reference.html %}
+{% assign truestring='true' %}
+{% assign falsestring='false' %}
+{% include plotschema-reference.html quote=quote array=array arrays=arrays object=object 2darray=2darray data_array=data_array truestring=truestring falsestring=falsestring %}
