rm `validate=False` yippee

--- a/_posts/python/3d-filled-line/2015-04-09-3d-filled-line.html
+++ b/_posts/python/3d-filled-line/2015-04-09-3d-filled-line.html
@@ -64,7 +64,7 @@ layout = dict(
 fig = dict(data=data, layout=layout)
 
 # IPython notebook
-# py.iplot(fig, validate=False, filename='filled-3d-lines')
+# py.iplot(fig, filename='filled-3d-lines')
 
-url = py.plot(fig, validate=False, filename='filled-3d-lines')
+url = py.plot(fig, filename='filled-3d-lines')
 
