--- a/_posts/python/3d-ribbon/2015-07-15-ribbon.html
+++ b/_posts/python/3d-ribbon/2015-07-15-ribbon.html
@@ -38,4 +38,4 @@ for i in range(1, sample_size):
     ))
 
 fig = { 'data':traces, 'layout':{'title':'Ribbon Plot'} }
-py.iplot(fig, filename='ribbon-plot-python', validate=False)
+py.iplot(fig, filename='ribbon-plot-python')
