--- a/_posts/python/annotations/2015-06-29-disable-hover.html
+++ b/_posts/python/annotations/2015-06-29-disable-hover.html
@@ -19,4 +19,4 @@ trace = dict(
     hoverinfo='none'
 )
 
-url = py.plot([trace], filename='hoverinfo=none', validate=False)
+url = py.plot([trace], filename='hoverinfo=none')
