--- a/_posts/python/axes/2015-06-29-axes-enumerated-ticks.html
+++ b/_posts/python/axes/2015-06-29-axes-enumerated-ticks.html
@@ -31,4 +31,4 @@ layout = dict(
     )
 
 fig = { 'data':data, 'layout':layout }
-url = py.plot( fig, filename='enumerated-ticks', validate=False )
+url = py.plot( fig, filename='enumerated-ticks' )
