--- a/_posts/python/bubble/2015-08-14-bubble-colorscale.html
+++ b/_posts/python/bubble/2015-08-14-bubble-colorscale.html
@@ -32,4 +32,4 @@ fig = {
     'data': data,
     'layout': layout,
 }
-plot_url = py.plot(fig, validate=False, filename='scatter-colorscale')
+plot_url = py.plot(fig, filename='scatter-colorscale')
