--- a/_posts/python/choropleth-maps/2015-06-29-us-states-choropleth-map.html
+++ b/_posts/python/choropleth-maps/2015-06-29-us-states-choropleth-map.html
@@ -56,4 +56,4 @@ layout = dict(
     
 fig = dict( data=data, layout=layout )
 
-url = py.plot( fig, validate=False, filename='d3-cloropleth-map' )
+url = py.plot( fig, filename='d3-cloropleth-map' )
