--- a/_posts/python/contour/2015-06-23-contour-colorbar-tick.html
+++ b/_posts/python/contour/2015-06-23-contour-colorbar-tick.html
@@ -31,4 +31,4 @@ data = [{
             },
         }
         }]
-plot_url = py.plot(data, validate=False, filename='contour-custom-colorbar-tick')
+plot_url = py.plot(data, filename='contour-custom-colorbar-tick')
