--- a/_posts/python/contour/2015-06-23-contour-xd-yd.html
+++ b/_posts/python/contour/2015-06-23-contour-xd-yd.html
@@ -27,4 +27,4 @@ data = [
         'y0':10,
     }
 ]
-plot_url = py.plot(data, validate=False, filename='simple-contour-xd-yd')
+plot_url = py.plot(data, filename='simple-contour-xd-yd')
