--- a/_posts/python/legends/2015-06-22-basic-legend-groups.html
+++ b/_posts/python/legends/2015-06-22-basic-legend-groups.html
@@ -51,4 +51,4 @@ py.iplot([
             'color': 'rgb(142, 124, 195)'
         }
     }
-], filename='basic-legend-grouping', validate=False)
+], filename='basic-legend-grouping')
