--- a/_posts/python/pie/2015-07-31-pie-chart-subplots.html
+++ b/_posts/python/pie/2015-07-31-pie-chart-subplots.html
@@ -80,4 +80,4 @@ fig = {
                'showlegend': False}
 }
 
-url = py.plot(fig, validate=False, filename='Pie Chart Subplot Example')
+url = py.plot(fig, filename='Pie Chart Subplot Example')
