--- a/_posts/python/pie/2015-07-31-pie-chart.html
+++ b/_posts/python/pie/2015-07-31-pie-chart.html
@@ -19,4 +19,4 @@ fig = {
     'layout': {'title': 'Forcasted 2014 U.S. PV Installations by Market Segment'}
 }
 
-url = py.plot(fig, validate=False, filename='Pie Chart Example')
+url = py.plot(fig, filename='Pie Chart Example')
