--- a/_posts/python/scatter-plot-on-maps/2015-07-01-north-america-precipitation.html
+++ b/_posts/python/scatter-plot-on-maps/2015-07-01-north-america-precipitation.html
@@ -76,4 +76,4 @@ layout = dict(
     title = 'US Precipitation 06-30-2015&lt;br&gt;Source: &lt;a href="http://water.weather.gov/precip/"&gt;NOAA&lt;/a&gt;',
 )
 fig = { 'data':data, 'layout':layout }
-url = py.plot(fig, validate=False, filename='precipitation')
+url = py.plot(fig, filename='precipitation')
