--- a/_posts/python/shapes/2015-06-17-shape-line-ref.html
+++ b/_posts/python/shapes/2015-06-17-shape-line-ref.html
@@ -60,5 +60,5 @@ fig = {
     'data': data,
     'layout': layout,
 }
-plot_url = py.plot(fig, validate=False, filename='shapes-line-ref')
+plot_url = py.plot(fig, filename='shapes-line-ref')
 
