--- a/_posts/python/shapes/2015-06-17-shape-lines.html
+++ b/_posts/python/shapes/2015-06-17-shape-lines.html
@@ -71,4 +71,4 @@ fig = {
     'data': data,
     'layout': layout,
 }
-plot_url = py.plot(fig, validate=False, filename='shapes-lines')
+plot_url = py.plot(fig, filename='shapes-lines')
