--- a/_posts/python/shapes/2015-06-17-shape-path.html
+++ b/_posts/python/shapes/2015-06-17-shape-path.html
@@ -72,4 +72,4 @@ fig = {
     'data': data,
     'layout': layout,
 }
-plot_url = py.plot(fig, validate=False, filename='shapes-path')
+plot_url = py.plot(fig, filename='shapes-path')
