--- a/_posts/python/shapes/2015-06-17-shape-rect-ref.html
+++ b/_posts/python/shapes/2015-06-17-shape-rect-ref.html
@@ -63,4 +63,4 @@ fig = {
     'data': data,
     'layout': layout,
 }
-plot_url = py.plot(fig, validate=False, filename='shapes-rectangle-ref')
+plot_url = py.plot(fig, filename='shapes-rectangle-ref')
