--- a/_posts/python/shapes/2015-06-17-shape-timestamp-highlight.html
+++ b/_posts/python/shapes/2015-06-17-shape-timestamp-highlight.html
@@ -64,4 +64,4 @@ layout = {
     'height': 600,
     'width': 600
 }
-plot_url = py.plot({'data': data, 'layout': layout}, validate=False, filename='timestamp-highlight')
+plot_url = py.plot({'data': data, 'layout': layout}, filename='timestamp-highlight')
