--- a/_posts/python/shapes/2015-06-17-shape-venn.html
+++ b/_posts/python/shapes/2015-06-17-shape-venn.html
@@ -78,4 +78,4 @@ fig = {
     'data': data,
     'layout': layout,
 }
-plot_url = py.plot(fig, validate=False, filename='venn-diagram')
+plot_url = py.plot(fig, filename='venn-diagram')
