--- a/_posts/python/shapes/2015-06-18-shape-tangent-line.html
+++ b/_posts/python/shapes/2015-06-18-shape-tangent-line.html
@@ -65,4 +65,4 @@ fig = {
     'data': data,
     'layout': layout,
 }
-plot_url = py.plot(fig, validate=False, filename='tangent-line')
+plot_url = py.plot(fig, filename='tangent-line')
