--- a/_posts/python/3d-subplot/2015-08-21-3d-subplots.html
+++ b/_posts/python/3d-subplot/2015-08-21-3d-subplots.html
@@ -61,4 +61,4 @@ fig['layout']['scene3'].update(scene)
 fig['layout']['scene4'].update(scene)
 
 
-plot_url = py.plot(fig, file_name='multiple_plots', validate=False)
+plot_url = py.plot(fig, file_name='multiple_plots')
