--- a/_posts/python/callbacks-dropdowns/2015-04-09-dropdown.html
+++ b/_posts/python/callbacks-dropdowns/2015-04-09-dropdown.html
@@ -21,4 +21,4 @@ layout = dict(
     )
     
 fig = dict( data=[dict(type = 'scattergeo')], layout=layout )
-url = py.plot( fig, validate=False, filename='d3-globe-empty' )
+url = py.plot( fig, filename='d3-globe-empty' )
