--- a/_posts/python/heatmap/2015-04-09-datetime-heatmap.html
+++ b/_posts/python/heatmap/2015-04-09-datetime-heatmap.html
@@ -43,4 +43,4 @@ layout = go.Layout( title='GitHub commits per day',
 
 fig = go.Figure( data=data, layout=layout )
 
-url = py.plot(fig, filename='datetime-heatmap', validate=False)   
+url = py.plot(fig, filename='datetime-heatmap')   
