--- a/_posts/python/lines-on-maps/2015-06-29-us-flight-paths-map.html
+++ b/_posts/python/lines-on-maps/2015-06-29-us-flight-paths-map.html
@@ -63,4 +63,4 @@ layout = dict(
     )
     
 fig = dict( data=flight_paths + airports, layout=layout )
-url = py.plot( fig, validate=False, filename='d3-flight-paths' )
+url = py.plot( fig, filename='d3-flight-paths' )
