--- a/_posts/python/map-subplots/2015-07-05-small-multiple-us-maps.html
+++ b/_posts/python/map-subplots/2015-07-05-small-multiple-us-maps.html
@@ -130,4 +130,4 @@ for y in reversed(range(ROWS)):
             break
     
 fig = { 'data':data, 'layout':layout }
-py.iplot( fig, validate=False, filename='US Walmart growth', height=900, width=1000 )
+py.iplot( fig, filename='US Walmart growth', height=900, width=1000 )
