--- a/_posts/python/pie/2015-08-03-pie-chart-donut.html
+++ b/_posts/python/pie/2015-08-03-pie-chart-donut.html
@@ -76,4 +76,4 @@ fig = {
     }
 }
 
-url = py.plot(fig, validate=False, filename='Global Emissions 1990-2011')
+url = py.plot(fig, filename='Global Emissions 1990-2011')
