--- a/_posts/python/shapes/2015-06-17-shape-circle.html
+++ b/_posts/python/shapes/2015-06-17-shape-circle.html
@@ -61,4 +61,4 @@ fig = {
     'data': data,
     'layout': layout,
 }
-plot_url = py.plot(fig, validate=False, filename='shapes-circle')
+plot_url = py.plot(fig, filename='shapes-circle')
