--- a/_posts/python/shapes/2015-06-17-shape-clusters.html
+++ b/_posts/python/shapes/2015-06-17-shape-clusters.html
@@ -107,4 +107,4 @@ fig = {
     'data': data,
     'layout': layout,
 }
-plot_url = py.plot(fig, validate=False, filename='clusters')
+plot_url = py.plot(fig, filename='clusters')
