--- a/_posts/python/shapes/2015-06-17-shape-rect.html
+++ b/_posts/python/shapes/2015-06-17-shape-rect.html
@@ -57,5 +57,5 @@ fig = {
     'data': data,
     'layout': layout,
 }
-plot_url = py.plot(fig, validate=False, filename='shapes-rectangle')
+plot_url = py.plot(fig, filename='shapes-rectangle')
 
