--- a/_posts/python/bar/2015-05-20-text-angel.html
+++ b/_posts/python/bar/2015-05-20-text-angel.html
@@ -1,6 +1,6 @@
 ---
 name: Rotated Bar Chart Labels
-plot_url: https://plot.ly/~neda/2093/_2013-sales-report/
+plot_url: https://plot.ly/~PlotBot/980
 language: python
 suite: bar
 order: 12
@@ -10,35 +10,33 @@ sitemap: false
 # Find your api_key here: https://plot.ly/settings/api
 
 import plotly.plotly as py
-from plotly.graph_objs import *
+import plotly.graph_objs as go
 
-trace0 = Bar(
+trace0 = go.Bar(
     x=['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct',
        'Nov', 'Dec'],
     y=[20, 14, 25, 16, 18, 22, 19, 15, 12, 16, 14, 17],
     name='Primary Product',
-    marker=Marker(
-        color='rgb(49,130,189)',
-        opacity=0.7,
-    ),
+    marker=dict(
+        color='rgb(49,130,189)'
+    )
 )
-trace1 = Bar(
+trace1 = go.Bar(
     x=['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct',
        'Nov', 'Dec'],
     y=[19, 14, 22, 14, 16, 19, 15, 14, 10, 12, 12, 16],
     name='Secondary Product',
-    marker=Marker(
+    marker=dict(
         color='rgb(204,204,204)',
-        opacity=0.5,
-    ),
+    )
 )
-data = Data([trace0, trace1])
-layout = Layout(
-    xaxis=XAxis(
+data = [trace0, trace1]
+layout = go.Layout(
+    xaxis=dict(
         # set x-axis' labels direction at 45 degree angle
         tickangle=-45,
     ),
     barmode='group',
 )
-fig = Figure(data=data, layout=layout)
+fig = go.Figure(data=data, layout=layout)
 plot_url = py.plot(fig, filename='angled-text-bar')
