--- a/_posts/python/bar/2015-05-20-text-hover-bar.html
+++ b/_posts/python/bar/2015-05-20-text-hover-bar.html
@@ -1,6 +1,6 @@
 ---
 name: Bar Chart with Hover Text
-plot_url: https://plot.ly/~neda/2041/january-2013-sales-report/
+plot_url: https://plot.ly/~PlotBot/982
 language: python
 suite: bar
 order: 10
@@ -10,24 +10,24 @@ sitemap: false
 # Find your api_key here: https://plot.ly/settings/api
 
 import plotly.plotly as py
-from plotly.graph_objs import *
+import plotly.graph_objs as go
 
-trace0 = Bar(
+trace0 = go.Bar(
     x=['Product A', 'Product B', 'Product C'],
     y=[20, 14, 23],
     text=['27% market share', '24% market share', '19% market share'],
-    marker=Marker(
+    marker=dict(
         color='rgb(158,202,225)',
-        opacity=0.6,
-        line=Line(
+        line=dict(
             color='rgb(8,48,107)',
             width=1.5,
         )
-    )
+    ),
+    opacity=0.6
 )
-data = Data([trace0])
-layout = Layout(
+data = [trace0]
+layout = go.Layout(
     title='January 2013 Sales Report',
 )
-fig = Figure(data=data, layout=layout)
+fig = go.Figure(data=data, layout=layout)
 plot_url = py.plot(fig, filename='text-hover-bar')
