--- a/_posts/python/bar/2015-05-20-text-with-annotations.html
+++ b/_posts/python/bar/2015-05-20-text-with-annotations.html
@@ -1,6 +1,6 @@
 ---
 name: Styled Bar Chart with Direct Labels
-plot_url: https://plot.ly/~neda/1745
+plot_url: https://plot.ly/~PlotBot/984
 language: python
 suite: bar
 order: 11
@@ -8,27 +8,29 @@ sitemap: false
 ---
 # Learn about API authentication here: https://plot.ly/python/getting-started
 # Find your api_key here: https://plot.ly/settings/api
+import plotly.plotly as py
+import plotly.graph_objs as go
 
 x = ['Product A', 'Product B', 'Product C']
 y = [20, 14, 23]
 
-data = Data([
-    Bar(
+data = [
+    go.Bar(
         x=x,
         y=y,
-        marker=Marker(
+        marker=dict(
             color='rgb(158,202,225)',
-            opacity=0.6,
-            line=Line(
+            line=dict(
                 color='rgb(8,48,107)',
                 width=1.5
             ),
         ),
+        opacity=0.6
     )
-])
-layout = Layout(
+]
+layout = go.Layout(
     annotations=[
-        Annotation(
+        dict(
             x=xi,
             y=yi,
             text=str(yi),
@@ -37,5 +39,5 @@ layout = Layout(
             showarrow=False,
         ) for xi, yi in zip(x, y)]
 )
-fig = Figure(data=data, layout=layout)
+fig = go.Figure(data=data, layout=layout)
 plot_url = py.plot(fig, filename='bar-direct-labels')
