--- a/_posts/python/box/2015-06-18-box-grouped-horizontal.html
+++ b/_posts/python/box/2015-06-18-box-grouped-horizontal.html
@@ -48,15 +48,12 @@ data = [
     }
 ]
 layout = {
-    'fixedaxes': 'all',
     'xaxis': {
         'title': 'normalized moisture',
         'zeroline': False,
     },
     'boxmode': 'group',
 }
-fig = {
-    'data': data,
-    'layout': layout,
-}
+fig = go.Figure(data=data, layout=layout)
+
 plot_url = py.plot(fig, validate=False, filename='horizontal-box-grouped')
