--- a/_posts/python/contour/2015-06-23-contour-connectgaps.html
+++ b/_posts/python/contour/2015-06-23-contour-connectgaps.html
@@ -10,7 +10,7 @@ sitemap: false
 # Find your api_key here: https://plot.ly/settings/api
 
 import plotly.plotly as py
-from plotly.graph_objs import *
+import plotly.tools as tls
 
 trace0 = {
     'z': [[None, None, None, 12, 13, 14, 15, 16],
@@ -61,8 +61,8 @@ trace3 = {
     'showscale': False
 }
 
-fig = tools.make_subplots(rows=2, cols=2, subplot_titles=('connectgaps = False',
-                                                          'connectgaps = True'))
+fig = tls.make_subplots(rows=2, cols=2, subplot_titles=('connectgaps = False',
+                                                        'connectgaps = True'))
 
 fig.append_trace(trace0, 1, 1)
 fig.append_trace(trace1, 1, 2)
@@ -72,4 +72,4 @@ fig.append_trace(trace3, 2, 2)
 fig['layout']['yaxis1'].update(title='Contour map')
 fig['layout']['yaxis3'].update(title='Heatmap')
 
-py.iplot(fig, validate=False, filename='contour-connectgaps')
+py.plot(fig, validate=False, filename='contour-connectgaps')
