--- a/_posts/pandas/lines-on-maps/2015-07-01-nyc-london-great-circle.html
+++ b/_posts/pandas/lines-on-maps/2015-07-01-nyc-london-great-circle.html
@@ -6,11 +6,10 @@ suite: lines-on-maps
 order: 2
 sitemap: false
 ---
-
 import plotly.plotly as py
+import plotly.graph_objs as go
 
-nyc_london = [ dict(
-    type = 'scattergeo',
+nyc_london = [go.Scattergeo(
     lat = [ 40.7127, 51.5072 ],
     lon = [ -74.0059, 0.1275 ],
     mode = 'lines',
@@ -18,11 +17,11 @@ nyc_london = [ dict(
         width = 2,
         color = 'blue',
     ),
-) ]
-    
+)]
+
 layout = dict(
         title = 'London to NYC Great Circle',
-        showlegend = False,         
+        showlegend = False,
         geo = dict(
             resolution = 50,
             showland = True,
@@ -35,17 +34,15 @@ layout = dict(
             lataxis = dict(
                 range = [ 20, 60 ],
                 showgrid = True,
-                tickmode = "linear",
                 dtick = 10
             ),
             lonaxis = dict(
                 range = [-100, 20],
                 showgrid = True,
-                tickmode = "linear",
                 dtick = 20
             ),
         )
     )
-    
+
 fig = dict( data=nyc_london, layout=layout )
 url = py.plot( fig, validate=False, filename='d3-great-circle' )
