--- a/_posts/python/colorscales/2015-08-12-discrete-colorscale.html
+++ b/_posts/python/colorscales/2015-08-12-discrete-colorscale.html
@@ -6,6 +6,7 @@ suite: colorscales
 order: 2
 sitemap: false
 ---
+import plotly.plotly as py
 
 py.plot([{
     'z': [
@@ -22,10 +23,10 @@ py.plot([{
         [0.1, 'rgb(20, 20, 20)'],
         [0.2, 'rgb(20, 20, 20)'],
 
-        # Values between 20-30% of the min and max of z 
+        # Values between 20-30% of the min and max of z
         # have color rgb(40, 40, 40)
         [0.2, 'rgb(40, 40, 40)'],
-        [0.3, 'rgb(40, 40, 40)'],                
+        [0.3, 'rgb(40, 40, 40)'],
 
         [0.3, 'rgb(60, 60, 60)'],
         [0.4, 'rgb(60, 60, 60)'],
@@ -34,22 +35,21 @@ py.plot([{
         [0.5, 'rgb(80, 80, 80)'],
 
         [0.5, 'rgb(100, 100, 100)'],
-        [0.6, 'rgb(100, 100, 100)'],                
-    
+        [0.6, 'rgb(100, 100, 100)'],
+
         [0.6, 'rgb(120, 120, 120)'],
-        [0.7, 'rgb(120, 120, 120)'],    
+        [0.7, 'rgb(120, 120, 120)'],
 
         [0.7, 'rgb(140, 140, 140)'],
-        [0.8, 'rgb(140, 140, 140)'],   
+        [0.8, 'rgb(140, 140, 140)'],
 
         [0.8, 'rgb(160, 160, 160)'],
-        [0.9, 'rgb(160, 160, 160)'], 
+        [0.9, 'rgb(160, 160, 160)'],
 
         [0.9, 'rgb(180, 180, 180)'],
         [1.0, 'rgb(180, 180, 180)']
     ],
     'colorbar': {
-        'autotick': False,
         'tick0': 0,
         'dtick': 1
     }
