--- a/_posts/python/line-plots/2015-04-09-line-shapes.html
+++ b/_posts/python/line-plots/2015-04-09-line-shapes.html
@@ -10,73 +10,72 @@ sitemap: false
 # Find your api_key here: https://plot.ly/settings/api
 
 import plotly.plotly as py
-from plotly.graph_objs import *
+import plotly.graph_objs as go
 
-trace1 = Scatter(
+trace1 = go.Scatter(
     x=[1, 2, 3, 4, 5],
     y=[1, 3, 2, 3, 1],
     mode='lines+markers',
     name="'linear'",
-    line=Line(
+    line=dict(
         shape='linear'
     )
 )
-trace2 = Scatter(
+trace2 = go.Scatter(
     x=[1, 2, 3, 4, 5],
     y=[6, 8, 7, 8, 6],
     mode='lines+markers',
     name="'spline'",
     text=["tweak line smoothness&lt;br&gt;with 'smoothing' in line object", "tweak line smoothness&lt;br&gt;with 'smoothing' in line object", "tweak line smoothness&lt;br&gt;with 'smoothing' in line object", "tweak line smoothness&lt;br&gt;with 'smoothing' in line object", "tweak line smoothness&lt;br&gt;with 'smoothing' in line object", "tweak line smoothness&lt;br&gt;with 'smoothing' in line object"],
-    line=Line(
+    line=dict(
         shape='spline'
     )
 )
-trace3 = Scatter(
+trace3 = go.Scatter(
     x=[1, 2, 3, 4, 5],
     y=[11, 13, 12, 13, 11],
     mode='lines+markers',
     name="'vhv'",
-    line=Line(
+    line=dict(
         shape='vhv'
     )
 )
-trace4 = Scatter(
+trace4 = go.Scatter(
     x=[1, 2, 3, 4, 5],
     y=[16, 18, 17, 18, 16],
     mode='lines+markers',
     name="'hvh'",
-    line=Line(
+    line=dict(
         shape='hvh'
     )
 )
-trace5 = Scatter(
+trace5 = go.Scatter(
     x=[1, 2, 3, 4, 5],
     y=[21, 23, 22, 23, 21],
     mode='lines+markers',
     name="'vh'",
-    line=Line(
+    line=dict(
         shape='vh'
     )
 )
-trace6 = Scatter(
+trace6 = go.Scatter(
     x=[1, 2, 3, 4, 5],
     y=[26, 28, 27, 28, 26],
     mode='lines+markers',
     name="'hv'",
-    line=Line(
+    line=dict(
         shape='hv'
     )
 )
-data = Data([trace1, trace2, trace3, trace4, trace5, trace6])
-layout = Layout(
-    legend=Legend(
+data = [trace1, trace2, trace3, trace4, trace5, trace6]
+layout = go.Layout(
+    legend=dict(
         y=0.5,
         traceorder='reversed',
-        font=Font(
+        font=dict(
             size=16
-        ),
-        yref='paper'
+        )
     )
 )
-fig = Figure(data=data, layout=layout)
+fig = go.Figure(data=data, layout=layout)
 plot_url = py.plot(fig, filename='line-shapes')
