more python lib syntax updates

--- a/_posts/pandas/legends/2015-06-22-basic-legend-groups.html
+++ b/_posts/pandas/legends/2015-06-22-basic-legend-groups.html
@@ -30,17 +30,17 @@ py.iplot([
         'line': {
             'color': 'rgb(164, 194, 244)'
         }
-    },   
+    },
     {
         'x': [1, 2, 3],
         'y': [4, 9, 2],
-        'legendgroup': 'group2', 
+        'legendgroup': 'group2',
         'name': 'second legend group',
         'mode': 'markers',
         'marker': {
             'color': 'rgb(142, 124, 195)'
         }
-    },        
+    },
     {
         'x': [1, 2, 3],
         'y': [5, 5, 5],
@@ -51,4 +51,4 @@ py.iplot([
             'color': 'rgb(142, 124, 195)'
         }
     }
-], filename='basic-legend-grouping', validate=False)
+], filename='basic-legend-grouping')
