--- a/_posts/python/3d-wireframe/2015-08-21-wireframe.html
+++ b/_posts/python/3d-wireframe/2015-08-21-wireframe.html
@@ -7,7 +7,7 @@ order: 0
 sitemap: false
 ---
 import plotly.plotly as py
-from plotly.graph_objs import *
+import plotly.graph_objs as go
 
 import numpy as np
 
@@ -20,27 +20,26 @@ z = np.sin(R)
 
 # Creating the plot
 lines = []
-line_marker = Line(color='#0066FF', width=2)
+line_marker = dict(color='#0066FF', width=2)
 for i, j, k in zip(xGrid, yGrid, z):
-    lines.append(Scatter3d(x=i, y=j, z=k, mode='lines', line=line_marker))
+    lines.append(go.Scatter3d(x=i, y=j, z=k, mode='lines', line=line_marker))
 
-data = Data(lines)
-layout = Layout(
+layout = go.Layout(
     title='Wireframe Plot',
-    scene=Scene(
-        xaxis=XAxis(
+    scene=dict(
+        xaxis=dict(
             gridcolor='rgb(255, 255, 255)',
             zerolinecolor='rgb(255, 255, 255)',
             showbackground=True,
             backgroundcolor='rgb(230, 230,230)'
         ),
-        yaxis=YAxis(
+        yaxis=dict(
             gridcolor='rgb(255, 255, 255)',
             zerolinecolor='rgb(255, 255, 255)',
             showbackground=True,
             backgroundcolor='rgb(230, 230,230)'
         ),
-        zaxis=ZAxis(
+        zaxis=dict(
             gridcolor='rgb(255, 255, 255)',
             zerolinecolor='rgb(255, 255, 255)',
             showbackground=True,
@@ -49,5 +48,5 @@ layout = Layout(
     ),
     showlegend=False,
 )
-fig = Figure(data=data, layout=layout)
+fig = go.Figure(data=lines, layout=layout)
 plot_url = py.plot(fig, filename='wireframe_plot')
