--- a/_posts/python/axes/2015-04-09-axes-range-mode.html
+++ b/_posts/python/axes/2015-04-09-axes-range-mode.html
@@ -10,24 +10,24 @@ sitemap: false
 # Find your api_key here: https://plot.ly/settings/api
 
 import plotly.plotly as py
-from plotly.graph_objs import *
+import plotly.graph_objs as go
 
-data = Data([
-    Scatter(
+data = [
+    go.Scatter(
         x=[2, 4, 6],
         y=[-3, 0, 3]
     )
-])
-layout = Layout(
+]
+layout = go.Layout(
     showlegend=False,
-    xaxis=XAxis(
+    xaxis=dict(
         rangemode='tozero',
         autorange=True
     ),
-    yaxis=YAxis(
+    yaxis=dict(
         rangemode='nonnegative',
         autorange=True
     )
 )
-fig = Figure(data=data, layout=layout)
+fig = go.Figure(data=data, layout=layout)
 plot_url = py.plot(fig, filename='axes-range-mode')
