--- a/_posts/python/axes/2015-04-09-axes-reversed.html
+++ b/_posts/python/axes/2015-04-09-axes-reversed.html
@@ -10,18 +10,18 @@ sitemap: false
 # Find your api_key here: https://plot.ly/settings/api
 
 import plotly.plotly as py
-from plotly.graph_objs import *
+import plotly.graph_objs as go
 
-data = Data([
-    Scatter(
+data = [
+    go.Scatter(
         x=[1, 2],
         y=[1, 2]
     )
-])
-layout = Layout(
-    xaxis=XAxis(
+]
+layout = go.Layout(
+    xaxis=dict(
         autorange='reversed'
     )
 )
-fig = Figure(data=data, layout=layout)
+fig = go.Figure(data=data, layout=layout)
 plot_url = py.plot(fig, filename='axes-reversed')
