--- a/_posts/python/callbacks-buttons/2015-04-09-button-bind.html
+++ b/_posts/python/callbacks-buttons/2015-04-09-button-bind.html
@@ -9,10 +9,10 @@ sitemap: false
 order: 0
 ---
 import plotly.plotly as py
-from plotly.graph_objs import *
+import plotly.graph_objs as go
 import pandas as pd
 df = pd.read_csv('https://raw.githubusercontent.com/plotly/datasets/master/volcano.csv')
 
-data = Data([Heatmap( z=df.values.tolist(), colorscale='Viridis' )])
+data = [go.Heatmap(z=df.values.tolist(), colorscale='Viridis')]
 
 py.iplot(data, filename='pandas-heatmap')
