--- a/_posts/python/contour/2015-04-09-simple-contour.html
+++ b/_posts/python/contour/2015-04-09-simple-contour.html
@@ -10,7 +10,7 @@ sitemap: false
 # Find your api_key here: https://plot.ly/settings/api
 
 import plotly.plotly as py
-from plotly.graph_objs import *
+import plotly.graph_objs as go
 
 import numpy as np
 
@@ -23,11 +23,5 @@ for i, xi in enumerate(x):
         r2 = (xi**2+yj**2)
         z[i][j] = np.sin(xi)*np.cos(yj)*np.sin(r2)/(np.log(r2+1))
 
-data = Data([
-    Contour(
-        z=z,
-        x=x,
-        y=y
-    )
-])
+data = [go.Contour(z=z, x=x, y=y)]
 plot_url = py.plot(data, filename='simple-contour')
