--- a/_posts/python/error-bar/2015-04-09-error-bar-horizontal.html
+++ b/_posts/python/error-bar/2015-04-09-error-bar-horizontal.html
@@ -10,16 +10,16 @@ sitemap: false
 # Find your api_key here: https://plot.ly/settings/api
 
 import plotly.plotly as py
-from plotly.graph_objs import *
+import plotly.graph_objs as go
 
-data = Data([
-    Scatter(
+data = [
+    go.Scatter(
         x=[1, 2, 3, 4],
         y=[2, 1, 3, 4],
-        error_x=ErrorX(
+        error_x=dict(
             type='percent',
             value=10
         )
     )
-])
+]
 plot_url = py.plot(data, filename='error-bar-horizontal')
