--- a/_posts/python/histogram2d/2015-04-09-2d-histogram-scatter.html
+++ b/_posts/python/histogram2d/2015-04-09-2d-histogram-scatter.html
@@ -10,7 +10,7 @@ sitemap: false
 # Find your api_key here: https://plot.ly/settings/api
 
 import plotly.plotly as py
-from plotly.graph_objs import *
+import plotly.graph_objs as go
 
 import numpy as np
 
@@ -22,33 +22,33 @@ y1 = np.random.rand(50) + 1.0
 x = np.concatenate([x0, x1])
 y = np.concatenate([y0, y1])
 
-trace1 = Scatter(
+trace1 = go.Scatter(
     x=x0,
     y=y0,
     mode='markers',
     showlegend=False,
-    marker=Marker(
+    marker=dict(
         symbol='x',
         opacity=0.7,
         color='white',
-        size=8,        
-        line=Line(width=1),
+        size=8,
+        line=dict(width=1),
     )
 )
-trace2 = Scatter(
+trace2 = go.Scatter(
     x=x1,
     y=y1,
     mode='markers',
     showlegend=False,
-    marker=Marker(
+    marker=dict(
         symbol='circle',
         opacity=0.7,
         color='white',
-        size=8,        
-        line=Line(width=1),        
+        size=8,
+        line=dict(width=1),
     )
 )
-trace3 = Histogram2d(
+trace3 = go.Histogram2d(
     x=x,
     y=y,
     colorscale='YIGnBu',
@@ -57,16 +57,16 @@ trace3 = Histogram2d(
     nbinsy=14,
     zauto=False,
 )
-    
-layout = Layout( 
-    xaxis=XAxis( ticks='', showgrid=False, zeroline=False, nticks=20 ),
-    yaxis=YAxis( ticks='', showgrid=False, zeroline=False, nticks=20 ),
+
+layout = go.Layout(
+    xaxis=dict( ticks='', showgrid=False, zeroline=False, nticks=20 ),
+    yaxis=dict( ticks='', showgrid=False, zeroline=False, nticks=20 ),
     autosize=False,
     height=550,
     width=550,
     hovermode='closest',
 )
-data = Data([trace1, trace2, trace3])
-fig = Figure(data=data,layout=layout)
+data = [trace1, trace2, trace3]
+fig = go.Figure(data=data, layout=layout)
 
 url = py.plot(fig, filename='2d-histogram-scatter')
