--- a/_posts/python/horizontal-bar/2015-05-20-horizontal-bar.html
+++ b/_posts/python/horizontal-bar/2015-05-20-horizontal-bar.html
@@ -10,13 +10,13 @@ sitemap: false
 # Find your api_key here: https://plot.ly/settings/api
 
 import plotly.plotly as py
-from plotly.graph_objs import *
+import plotly.graph_objs as go
 
-data = Data([
-    Bar(
-        x=[20, 14, 23],    
+data = [
+    go.Bar(
+        x=[20, 14, 23],
         y=['giraffes', 'orangutans', 'monkeys'],
-        orientation = 'h',    
+        orientation = 'h',
     )
-])
+]
 plot_url = py.plot(data, filename='horizontal-bar')
