--- a/_posts/python/annotations/2015-04-09-hover-chart-basic.html
+++ b/_posts/python/annotations/2015-04-09-hover-chart-basic.html
@@ -10,18 +10,18 @@ sitemap: false
 # Find your api_key here: https://plot.ly/settings/api
 
 import plotly.plotly as py
-from plotly.graph_objs import *
+import plotly.graph_objs as go
 
-data = Data([
-    Scatter(
+data = [
+    go.Scatter(
         x=[0, 1, 2],
         y=[1, 3, 2],
         mode='markers',
         text=['Text A', 'Text B', 'Text C']
     )
-])
-layout = Layout(
+]
+layout = go.Layout(
     title='Hover over the points to see the text'
 )
-fig = Figure(data=data, layout=layout)
+fig = go.Figure(data=data, layout=layout)
 plot_url = py.plot(fig, filename='hover-chart-basic')
