--- a/_posts/python/bar/2015-04-09-basic-bar.html
+++ b/_posts/python/bar/2015-04-09-basic-bar.html
@@ -10,12 +10,12 @@ sitemap: false
 # Find your api_key here: https://plot.ly/settings/api
 
 import plotly.plotly as py
-from plotly.graph_objs import *
+import plotly.graph_objs as go
 
-data = Data([
-    Bar(
+data = [
+    go.Bar(
         x=['giraffes', 'orangutans', 'monkeys'],
         y=[20, 14, 23]
     )
-])
+]
 plot_url = py.plot(data, filename='basic-bar')
