--- a/_posts/python/box/2015-04-09-box-plot-jitter.html
+++ b/_posts/python/box/2015-04-09-box-plot-jitter.html
@@ -10,14 +10,14 @@ sitemap: false
 # Find your api_key here: https://plot.ly/settings/api
 
 import plotly.plotly as py
-from plotly.graph_objs import *
+import plotly.graph_objs as go
 
-data = Data([
-    Box(
+data = [
+    go.Box(
         y=[0, 1, 1, 2, 3, 5, 8, 13, 21],
         boxpoints='all',
         jitter=0.3,
         pointpos=-1.8
     )
-])
+]
 plot_url = py.plot(data, filename='box-plot-jitter')
