--- a/_posts/python/box/2015-05-29-horizontal-box.html
+++ b/_posts/python/box/2015-05-29-horizontal-box.html
@@ -10,17 +10,13 @@ sitemap: false
 # Find your api_key here: https://plot.ly/settings/api
 
 import plotly.plotly as py
-from plotly.graph_objs import *
+import plotly.graph_objs as go
 import numpy as np
 
 x0 = np.random.randn(50)
 x1 = np.random.randn(50) + 2
 
-trace0 = Box(
-    x=x0
-)
-trace1 = Box(
-    x=x1
-)
-data = Data([trace0, trace1])
-Plot_url = py.plot(data, filename='H-box-plot')
+trace0 = Box(x=x0)
+trace1 = Box(x=x1)
+data = [trace0, trace1]
+plot_url = py.plot(data, filename='H-box-plot')
