--- a/_posts/python/callbacks-hover/2015-04-09-hover-bind.html
+++ b/_posts/python/callbacks-hover/2015-04-09-hover-bind.html
@@ -10,10 +10,10 @@ order: 0
 ---
 
 import plotly.plotly as py
-from plotly.graph_objs import *
+import plotly.graph_objs as go
 
-data = Data([
-    Bar(
+data = [
+    go.Bar(
         x=['Bob Dylan', 'The Beatles', 'David Bowie', 'Randy Newman', 'The Rolling Stones', 'Madonna', 'Frank Sinatra', 'The Beach Boys', 'Marvin Gaye', 'Prince', 'The Kinks', 'Elvis Presley', 'Tom Waits', 'U2', 'The Clash', 'Johnny Cash', 'Kate Bush', 'The Supremes', 'The Smiths', 'Al Green', 'Pulp', 'Chuck Berry', 'Elvis Costello and the Attractions', 'Neil Young', 'Stevie Wonder', 'Ray Charles', 'The Pogues', 'Grace Jones', 'Bill Withers', 'The Who', 'Paul Simon', 'Roy Orbison', 'Arctic Monkeys', 'Bruce Springsteen', 'The Police', 'Rod Stewart', 'Steve Earle'],
         y=[24, 19, 9, 8, 8, 6, 6, 6, 6, 6, 6, 6, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4],
         name='Number of songs per artist',
@@ -21,15 +21,15 @@ data = Data([
             color='#2ca02c'
         )
     )
-])
+]
 
-layout = Layout(
+layout = go.Layout(
     title="Number of songs listed in the Guardian's&lt;br&gt;&lt;em&gt;Top 1,000 Songs to Hear Before You Die&lt;/em&gt; per artist with 4 or more songs",
-    font=Font(
+    font=dict(
         family='Georgia, serif',
         color='#635F5D'
     ),
     plot_bgcolor='#EFECEA'
 )
-fig = Figure(data=data, layout=layout)
+fig = go.Figure(data=data, layout=layout)
 plot_url = py.plot(fig)
