--- a/_posts/python/colorscales/2015-06-23-contour-customize-colorscale.html
+++ b/_posts/python/colorscales/2015-06-23-contour-customize-colorscale.html
@@ -10,10 +10,10 @@ sitemap: false
 # Find your api_key here: https://plot.ly/settings/api
 
 import plotly.plotly as py
-from plotly.graph_objs import *
+import plotly.graph_objs as go
 
-data = Data([
-    Contour(
+data = [
+    go.Contour(
         z=[[10, 10.625, 12.5, 15.625, 20],
            [5.625, 6.25, 8.125, 11.25, 15.625],
            [2.5, 3.125, 5., 8.125, 12.5],
@@ -21,5 +21,5 @@ data = Data([
            [0, 0.625, 2.5, 5.625, 10]],
         colorscale=[[0, 'rgb(166,206,227)'], [0.25, 'rgb(31,120,180)'], [0.45, 'rgb(178,223,138)'], [0.65, 'rgb(51,160,44)'], [0.85, 'rgb(251,154,153)'], [1, 'rgb(227,26,28)']],
     )
-])
+]
 plot_url = py.plot(data, filename='colorscales-custom-colorscale')
