--- a/_posts/python/contour/2015-06-23-contour-colorbar-title.html
+++ b/_posts/python/contour/2015-06-23-contour-colorbar-title.html
@@ -4,30 +4,29 @@ plot_url: https://plot.ly/~neda/5163
 language: python
 suite: contour
 order: 11
-description: See <a href="https://plot.ly/python/reference/#ColorBar">ColorBar reference</a> for a full list of colorbar customizations.
 sitemap: false
 ---
 # Learn about API authentication here: https://plot.ly/python/getting-started
 # Find your api_key here: https://plot.ly/settings/api
 
 import plotly.plotly as py
-from plotly.graph_objs import *
+import plotly.graph_objs as go
 
-data = Data([
-    Contour(
+data = [
+    go.Contour(
         z=[[10, 10.625, 12.5, 15.625, 20],
            [5.625, 6.25, 8.125, 11.25, 15.625],
            [2.5, 3.125, 5., 8.125, 12.5],
            [0.625, 1.25, 3.125, 6.25, 10.625],
            [0, 0.625, 2.5, 5.625, 10]],
-        colorbar=ColorBar(
+        colorbar=dict(
             title='Color bar title',
             titleside='right',
-            titlefont=Font(
+            titlefont=dict(
                 size=14,
                 family='Arial, sans-serif',
             ),
         )
     )
-])
+]
 plot_url = py.plot(data, filename='contour-custom-colorbar-title')
