--- a/_posts/python/contour/2015-06-23-contour-colorscale.html
+++ b/_posts/python/contour/2015-06-23-contour-colorscale.html
@@ -11,10 +11,10 @@ sitemap: false
 # Find your api_key here: https://plot.ly/settings/api
 
 import plotly.plotly as py
-from plotly.graph_objs import *
+import plotly.graph_objs as go
 
-data = Data([
-    Contour(
+data = [
+    go.Contour(
         z=[[10, 10.625, 12.5, 15.625, 20],
            [5.625, 6.25, 8.125, 11.25, 15.625],
            [2.5, 3.125, 5., 8.125, 12.5],
@@ -22,5 +22,5 @@ data = Data([
            [0, 0.625, 2.5, 5.625, 10]],
         colorscale='Jet',
     )
-])
+]
 plot_url = py.plot(data, filename='simple-contour-colorscale')
