--- a/_posts/python/contour/2015-06-23-contour-lines.html
+++ b/_posts/python/contour/2015-06-23-contour-lines.html
@@ -10,19 +10,19 @@ sitemap: false
 # Find your api_key here: https://plot.ly/settings/api
 
 import plotly.plotly as py
-from plotly.graph_objs import *
+import plotly.graph_objs as go
 
-data = Data([
-    Contour(
+data = [
+    go.Contour(
         z=[[10, 10.625, 12.5, 15.625, 20],
            [5.625, 6.25, 8.125, 11.25, 15.625],
            [2.5, 3.125, 5., 8.125, 12.5],
            [0.625, 1.25, 3.125, 6.25, 10.625],
            [0, 0.625, 2.5, 5.625, 10]],
         colorscale='Jet',
-        contours=Contours(
+        contours=dict(
             coloring='heatmap',
         ),
     )
-])
+]
 plot_url = py.plot(data, filename='contour-heatmap')
