--- a/_posts/python/contour/2015-06-23-contour-x-y.html
+++ b/_posts/python/contour/2015-06-23-contour-x-y.html
@@ -10,10 +10,10 @@ sitemap: false
 # Find your api_key here: https://plot.ly/settings/api
 
 import plotly.plotly as py
-from plotly.graph_objs import *
+import plotly.graph_objs as go
 
-data = Data([
-    Contour(
+data = [
+    go.Contour(
         z=[[10, 10.625, 12.5, 15.625, 20],
            [5.625, 6.25, 8.125, 11.25, 15.625],
            [2.5, 3.125, 5., 8.125, 12.5],
@@ -22,5 +22,5 @@ data = Data([
         x=[-9, -6, -5 , -3, -1],
         y=[0, 1, 4, 5, 7]
     )
-])
+]
 plot_url = py.plot(data, filename='simple-contour-x-y')
