--- a/_posts/python/density-plots/2015-04-09-2dhistogram-contour-subplots.html
+++ b/_posts/python/density-plots/2015-04-09-2dhistogram-contour-subplots.html
@@ -10,7 +10,7 @@ sitemap: false
 # Find your api_key here: https://plot.ly/settings/api
 
 import plotly.plotly as py
-from plotly.graph_objs import *
+import plotly.graph_objs as go
 
 import numpy as np
 
@@ -18,73 +18,56 @@ t = np.linspace(-1,1.2,2000)
 x = (t**3)+(0.3*np.random.randn(2000))
 y = (t**6)+(0.3*np.random.randn(2000))
 
-trace1 = Scatter(
-    x=x,
-    y=y,
-    mode='markers',
-    name='points',
-    marker=Marker(
-        color='rgb(102,0,0)',
-        size=2,
-        opacity=0.4
-    )
+trace1 = go.Scatter(
+    x=x, y=y, mode='markers', name='points',
+    marker=dict(color='rgb(102,0,0)', size=2, opacity=0.4)
 )
-trace2 = Histogram2dContour(
-    x=x,
-    y=y,
-    name='density',
-    ncontours=20,
-    colorscale='Hot',
-    reversescale=True,
-    showscale=False
+trace2 = go.Histogram2dcontour(
+    x=x, y=y, name='density', ncontours=20,
+    colorscale='Hot', reversescale=True, showscale=False
 )
-trace3 = Histogram(
-    x=x,
-    name='x density',
-    marker=Marker(
-        color='rgb(102,0,0)'
-    ),
+trace3 = go.Histogram(
+    x=x, name='x density',
+    marker=dict(color='rgb(102,0,0)'),
     yaxis='y2'
 )
-trace4 = Histogram(
-    y=y,
-    name='y density',
-    marker=Marker(
-        color='rgb(102,0,0)'
-    ),
+trace4 = go.Histogram(
+    y=y, name='y density', marker=dict(color='rgb(102,0,0)'),
     xaxis='x2'
 )
-data = Data([trace1, trace2, trace3, trace4])
-layout = Layout(
+data = [trace1, trace2, trace3, trace4]
+
+layout = go.Layout(
     showlegend=False,
     autosize=False,
     width=600,
     height=550,
-    xaxis=XAxis(
+    xaxis=dict(
         domain=[0, 0.85],
         showgrid=False,
         zeroline=False
     ),
-    yaxis=YAxis(
+    yaxis=dict(
         domain=[0, 0.85],
         showgrid=False,
         zeroline=False
     ),
-    margin=Margin(
+    margin=dict(
         t=50
     ),
     hovermode='closest',
     bargap=0,
-    xaxis2=XAxis(
+    xaxis2=dict(
         domain=[0.85, 1],
         showgrid=False,
         zeroline=False
     ),
-    yaxis2=YAxis(
+    yaxis2=dict(
         domain=[0.85, 1],
         showgrid=False,
         zeroline=False
     )
 )
-fig = Figure(data=data, layout=layout)
+
+fig = go.Figure(data=data, layout=layout)
 plot_url = py.plot(fig, filename='2dhistogram-2d-density-plot-subplots')
