--- a/_posts/python/error-bar/2015-04-09-error-bar-asymmetric-array.html
+++ b/_posts/python/error-bar/2015-04-09-error-bar-asymmetric-array.html
@@ -10,18 +10,18 @@ sitemap: false
 # Find your api_key here: https://plot.ly/settings/api
 
 import plotly.plotly as py
-from plotly.graph_objs import *
+import plotly.graph_objs as go
 
-data = Data([
-    Scatter(
+data = [
+    go.Scatter(
         x=[1, 2, 3, 4],
         y=[2, 1, 3, 4],
-        error_y=ErrorY(
+        error_y=dict(
             type='data',
             symmetric=False,
             array=[0.1, 0.2, 0.1, 0.1],
             arrayminus=[0.2, 0.4, 1, 0.2]
         )
     )
-])
+]
 plot_url = py.plot(data, filename='error-bar-asymmetric-array')
