--- a/_posts/python/error-bar/2015-04-09-percent-error-bar.html
+++ b/_posts/python/error-bar/2015-04-09-percent-error-bar.html
@@ -10,17 +10,17 @@ sitemap: false
 # Find your api_key here: https://plot.ly/settings/api
 
 import plotly.plotly as py
-from plotly.graph_objs import *
+import plotly.graph_objs as go
 
-data = Data([
-    Scatter(
+data = [
+    go.Scatter(
         x=[0, 1, 2],
         y=[6, 10, 2],
-        error_y=ErrorY(
+        error_y=dict(
             type='percent',
             value=50,
             visible=True
         )
     )
-])
+]
 plot_url = py.plot(data, filename='percent-error-bar')
