--- a/_posts/python/heatmap/2015-04-09-annotated-heatmap.html
+++ b/_posts/python/heatmap/2015-04-09-annotated-heatmap.html
@@ -24,28 +24,29 @@ z = [[0.00, 0.00, 0.75, 0.75, 0.00],  # y0
      [0.75, 0.75, 0.75, 0.75, 0.75],  # y2
      [0.00, 0.00, 0.00, 0.75, 0.00]]  # y3
 
-annotations = go.Annotations()
+annotations = []
 for n, row in enumerate(z):
     for m, val in enumerate(row):
         var = z[n][m]
         annotations.append(
-            go.Annotation(
-                text=str(val), 
+            dict(
+                text=str(val),
                 x=x[m], y=y[n],
                 xref='x1', yref='y1',
                 font=dict(color='white' if val > 0.5 else 'black'),
-                showarrow=False))
+                showarrow=False)
+            )
 
 colorscale = [[0, '#3D9970'], [1, '#001f3f']]  # custom colorscale
 trace = go.Heatmap(x=x, y=y, z=z, colorscale=colorscale, showscale=False)
 
-fig = go.Figure(data=go.Data([trace]))
+fig = go.Figure(data=[trace])
 fig['layout'].update(
     title="Annotated Heatmap",
     annotations=annotations,
-    xaxis=go.XAxis(ticks='', side='top'),
+    xaxis=dict(ticks='', side='top'),
     # ticksuffix is a workaround to add a bit of padding
-    yaxis=go.YAxis(ticks='', ticksuffix='  '),  
+    yaxis=dict(ticks='', ticksuffix='  '),
     width=700,
     height=700,
     autosize=False
