--- a/_posts/python/histogram/2015-04-09-style-histogram.html
+++ b/_posts/python/histogram/2015-04-09-style-histogram.html
@@ -10,25 +10,25 @@ sitemap: false
 # Find your api_key here: https://plot.ly/settings/api
 
 import plotly.plotly as py
-from plotly.graph_objs import *
+import plotly.graph_objs as go
 
 import numpy as np
 x0 = np.random.randn(500)
 x1 = np.random.randn(500)+1
 
-trace1 = Histogram(
+trace1 = go.Histogram(
     x=x0,
     histnorm='count',
     name='control',
     autobinx=False,
-    xbins=XBins(
+    xbins=dict(
         start=-3.2,
         end=2.8,
         size=0.2
     ),
-    marker=Marker(
+    marker=dict(
         color='fuchsia',
-        line=Line(
+        line=dict(
             color='grey',
             width=0
         )
@@ -39,28 +39,28 @@ trace2 = Histogram(
     x=x1,
     name='experimental',
     autobinx=False,
-    xbins=XBins(
+    xbins=dict(
         start=-1.8,
         end=4.2,
         size=0.2
     ),
-    marker=Marker(
+    marker=dict(
         color='rgb(255, 217, 102)'
     ),
     opacity=0.75
 )
-data = Data([trace1, trace2])
-layout = Layout(
+data = [trace1, trace2]
+layout = go.Layout(
     title='Sampled Results',
-    xaxis=XAxis(
+    xaxis=dict(
         title='Value'
     ),
-    yaxis=YAxis(
+    yaxis=dict(
         title='Count'
     ),
     barmode='overlay',
     bargap=0.25,
     bargroupgap=0.3
 )
-fig = Figure(data=data, layout=layout)
+fig = go.Figure(data=data, layout=layout)
 plot_url = py.plot(fig, filename='style-histogram')
