--- a/_posts/python/subplots/2015-08-17-customize-subplot-axes.html
+++ b/_posts/python/subplots/2015-08-17-customize-subplot-axes.html
@@ -9,15 +9,15 @@ sitemap: false
 
 from plotly import tools
 import plotly.plotly as py
-from plotly.graph_objs import *
+import plotly.graph_objs as go
 
-trace1 = Scatter(x=[1, 2, 3], y=[4, 5, 6])
+trace1 = go.Scatter(x=[1, 2, 3], y=[4, 5, 6])
 
-trace2 = Scatter(x=[20, 30, 40], y=[50, 60, 70])
+trace2 = go.Scatter(x=[20, 30, 40], y=[50, 60, 70])
 
-trace3 = Scatter(x=[300, 400, 500], y=[600, 700, 800])
+trace3 = go.Scatter(x=[300, 400, 500], y=[600, 700, 800])
 
-trace4 = Scatter(x=[4000, 5000, 6000], y=[7000, 8000, 9000])
+trace4 = go.Scatter(x=[4000, 5000, 6000], y=[7000, 8000, 9000])
 
 fig = tools.make_subplots(rows=2, cols=2, subplot_titles=('Plot 1', 'Plot 2',
                                                           'Plot 3', 'Plot 4'))
@@ -41,4 +41,4 @@ fig['layout']['yaxis4'].update(title='yaxis 4 title')
 
 fig['layout'].update(title='Customizing Subplot Axes')
 
-py.plot(fig, filename='customizing-subplot-axes')
+plot_url = py.plot(fig, filename='customizing-subplot-axes')
