--- a/_posts/python/time-series/2015-04-09-date-axes.html
+++ b/_posts/python/time-series/2015-04-09-date-axes.html
@@ -10,12 +10,12 @@ sitemap: false
 # Find your api_key here: https://plot.ly/settings/api
 
 import plotly.plotly as py
-from plotly.graph_objs import *
+import plotly.graph_objs as go
 
-data = Data([
-    Scatter(
+data = [
+    go.Scatter(
         x=['2013-10-04 22:23:00', '2013-11-04 22:23:00', '2013-12-04 22:23:00'],
         y=[1, 3, 6]
     )
-])
+]
 plot_url = py.plot(data, filename='date-axes')
