--- a/_posts/python/time-series/2015-04-09-python-datetime.html
+++ b/_posts/python/time-series/2015-04-09-python-datetime.html
@@ -10,7 +10,7 @@ sitemap: false
 # Find your api_key here: https://plot.ly/settings/api
 
 import plotly.plotly as py
-from plotly.graph_objs import *
+import plotly.graph_objs as go
 
 from datetime import datetime
 x = [
@@ -19,10 +19,10 @@ x = [
     datetime(year=2013, month=12, day=06)
 ]
 
-data = Data([
-    Scatter(
+data = [
+    go.Scatter(
         x=x,
         y=[1, 3, 6]
     )
-])
+]
 plot_url = py.plot(data, filename='python-datetime')
