--- a/_posts/pandas/3d-clusters/2015-07-15-alpha-shape.html
+++ b/_posts/pandas/3d-clusters/2015-07-15-alpha-shape.html
@@ -1,6 +1,6 @@
 ---
 name: 3d clustering with alpha shapes
-plot_url: https://plot.ly/~jackp/10540/
+plot_url: https://plot.ly/~PlotBot/1009
 language: pandas
 suite: 3d-clusters
 order: 0
@@ -8,7 +8,7 @@ sitemap: false
 arrangement: horizontal
 ---
 import plotly.plotly as py
-from plotly.graph_objs import *
+import plotly.graph_objs as go
 import pandas as pd
 df = pd.read_csv('https://raw.githubusercontent.com/plotly/datasets/master/iris.csv')
 df.head()
@@ -45,19 +45,19 @@ layout = dict(
     autosize=False,
     title='Iris dataset',
     scene=dict(
-        xaxis=XAxis(
+        xaxis=dict(
             gridcolor='rgb(255, 255, 255)',
             zerolinecolor='rgb(255, 255, 255)',
             showbackground=True,
             backgroundcolor='rgb(230, 230,230)'
         ),
-        yaxis=YAxis(
+        yaxis=dict(
             gridcolor='rgb(255, 255, 255)',
             zerolinecolor='rgb(255, 255, 255)',
             showbackground=True,
             backgroundcolor='rgb(230, 230,230)'
         ),
-        zaxis=ZAxis(
+        zaxis=dict(
             gridcolor='rgb(255, 255, 255)',
             zerolinecolor='rgb(255, 255, 255)',
             showbackground=True,
