--- a/_posts/pandas/annotations/2015-06-29-disable-hover.html
+++ b/_posts/pandas/annotations/2015-06-29-disable-hover.html
@@ -1,6 +1,6 @@
 ---
 name: Disabling Hover Text
-plot_url: https://plot.ly/~chris/10109/
+plot_url: https://plot.ly/~PlotBot/776
 language: pandas
 suite: annotations
 order: 6
