--- a/_posts/pandas/area/2015-04-09-stacked-area.html
+++ b/_posts/pandas/area/2015-04-09-stacked-area.html
@@ -14,6 +14,7 @@ arrangement: horizontal
 import plotly.plotly as py
 import cufflinks as cf
 import pandas as pd
+import numpy as np
 
 df = pd.DataFrame(np.random.rand(10, 4), columns=['a', 'b', 'c', 'd'])
 df.iplot(kind='area', fill=True, filename='cufflinks/stacked-area')
