--- a/_posts/pandas/box/2015-04-09-0basic-box-plot.html
+++ b/_posts/pandas/box/2015-04-09-0basic-box-plot.html
@@ -1,6 +1,6 @@
 ---
 name: Basic Box Plot
-plot_url: https://plot.ly/~jackp/10403
+plot_url: https://plot.ly/~PlotBot/1019
 language: pandas
 suite: box
 order: 0
@@ -14,7 +14,7 @@ import string
 import pandas as pd
 import numpy as np
 import plotly.plotly as py
-from plotly.graph_objs import *
+import plotly.graph_objs as go
 
 N = 100
 y_vals = {}
@@ -27,9 +27,9 @@ df.head()
 data = []
 
 for col in df.columns:
-    data.append(  Box( y=df[col], name=col, showlegend=False ) )
+    data.append(  go.Box( y=df[col], name=col, showlegend=False ) )
 
-data.append( Scatter( x = df.columns, y = df.mean(), mode='lines', name='mean' ) )
+data.append( go.Scatter( x = df.columns, y = df.mean(), mode='lines', name='mean' ) )
 
 # IPython notebook
 # py.iplot(data, filename='pandas-box-plot')
