--- a/_posts/pandas/bubble-maps/2015-06-29-bubble-map.html
+++ b/_posts/pandas/bubble-maps/2015-06-29-bubble-map.html
@@ -1,6 +1,6 @@
 ---
 name: United States Bubble Map
-plot_url: https://plot.ly/~jackp/8514/
+plot_url: https://plot.ly/~PlotBot/796
 language: pandas
 suite: bubble-maps
 order: 1
