--- a/_posts/pandas/bubble-maps/2015-07-03-ebola-cases.html
+++ b/_posts/pandas/bubble-maps/2015-07-03-ebola-cases.html
@@ -1,6 +1,6 @@
 ---
 name: Ebola Cases in West Africa
-plot_url: https://plot.ly/~jackp/8666/
+plot_url: https://plot.ly/~PlotBot/798
 language: pandas
 suite: bubble-maps
 order: 2
