--- a/_posts/pandas/choropleth-maps/2015-06-29-world-choropleth-map.html
+++ b/_posts/pandas/choropleth-maps/2015-06-29-world-choropleth-map.html
@@ -53,4 +53,4 @@ CIA World Factbook&lt;/a&gt;',
 )
 
 fig = dict( data=data, layout=layout )
-url = py.plot( fig, validate=False, filename='d3-world-map' )
+url = py.plot(fig, filename='d3-world-map')
