--- a/_posts/pandas/choropleth-maps/2015-07-03-choropleth-inset.html
+++ b/_posts/pandas/choropleth-maps/2015-07-03-choropleth-inset.html
@@ -97,4 +97,4 @@ HDX&lt;/a&gt;',
 )
 
 fig = go.Figure(layout=layout, data=cases+inset)
-url = py.plot(fig, validate=False, filename='West Africa Ebola cases 2014')
+url = py.plot(fig, filename='West Africa Ebola cases 2014')
