--- a/_posts/pandas/legends/2015-06-22-basic-legend-groups.html
+++ b/_posts/pandas/legends/2015-06-22-basic-legend-groups.html
@@ -10,7 +10,7 @@ description: Plotly legends are interactive. Click on the legend entries to hide
 
 import plotly.plotly as py
 
-py.iplot([
+py.plot([
     {
         'x': [1, 2, 3],
         'y': [2, 1, 3],
