--- a/_posts/pandas/line-plots/2015-05-12-0basic-line.html
+++ b/_posts/pandas/line-plots/2015-05-12-0basic-line.html
@@ -11,7 +11,10 @@ arrangement: horizontal
 # Find your api_key here: https://plot.ly/settings/api
 
 import plotly.plotly as py
+import plotly.graph_objs as go
+
 import pandas as pd
+import numpy as np
 
 N = 500
 x = np.linspace(0, 1, N)
@@ -20,7 +23,7 @@ df = pd.DataFrame({'x': x, 'y': y})
 df.head()
 
 data = [
-    Scatter(
+    go.Scatter(
         x=df['x'], # assign x as the dataframe column 'x'
         y=df['y']
     )
