--- a/_posts/pandas/3d-scatter/2015-04-09-simple-3d-scatter.html
+++ b/_posts/pandas/3d-scatter/2015-04-09-simple-3d-scatter.html
@@ -1,6 +1,6 @@
 ---
 name: 3D Scatter Plot
-plot_url: https://plot.ly/~jackp/10689
+plot_url: https://plot.ly/~PlotBot/1011
 language: pandas
 suite: 3d-scatter
 order: 0
@@ -11,7 +11,7 @@ arrangement: horizontal
 # Find your api_key here: https://plot.ly/settings/api
 
 import plotly.plotly as py
-from plotly.graph_objs import *
+import plotly.graph_objs as go
 import pandas as pd
 df = pd.read_csv('https://raw.githubusercontent.com/plotly/datasets/master/iris.csv')
 df.head()
@@ -41,19 +41,19 @@ layout = dict(
     autosize=False,
     title='Iris dataset',
     scene=dict(
-        xaxis=XAxis(
+        xaxis=dict(
             gridcolor='rgb(255, 255, 255)',
             zerolinecolor='rgb(255, 255, 255)',
             showbackground=True,
             backgroundcolor='rgb(230, 230,230)'
         ),
-        yaxis=YAxis(
+        yaxis=dict(
             gridcolor='rgb(255, 255, 255)',
             zerolinecolor='rgb(255, 255, 255)',
             showbackground=True,
             backgroundcolor='rgb(230, 230,230)'
         ),
-        zaxis=ZAxis(
+        zaxis=dict(
             gridcolor='rgb(255, 255, 255)',
             zerolinecolor='rgb(255, 255, 255)',
             showbackground=True,
