--- a/_posts/pandas/annotations/2015-04-09-style-annotation.html
+++ b/_posts/pandas/annotations/2015-04-09-style-annotation.html
@@ -10,28 +10,28 @@ sitemap: false
 # Find your api_key here: https://plot.ly/settings/api
 
 import plotly.plotly as py
-from plotly.graph_objs import *
+import plotly.graph_objs as go
 
-trace1 = Scatter(
+trace1 = go.Scatter(
     x=[0, 1, 2, 3, 4, 5, 6, 7, 8],
     y=[0, 1, 3, 2, 4, 3, 4, 6, 5]
 )
-trace2 = Scatter(
+trace2 = go.Scatter(
     x=[0, 1, 2, 3, 4, 5, 6, 7, 8],
     y=[0, 4, 5, 1, 2, 2, 3, 4, 2]
 )
-data = Data([trace1, trace2])
-layout = Layout(
+data = [trace1, trace2]
+layout = go.Layout(
     showlegend=False,
-    annotations=Annotations([
-        Annotation(
+    annotations=[
+        dict(
             x=2,
             y=5,
             xref='x',
             yref='y',
             text='max=5',
             showarrow=True,
-            font=Font(
+            font=dict(
                 family='Courier New, monospace',
                 size=16,
                 color='#ffffff'
@@ -49,7 +49,7 @@ layout = Layout(
             bgcolor='#ff7f0e',
             opacity=0.8
         )
-    ])
+    ]
 )
-fig = Figure(data=data, layout=layout)
+fig = go.Figure(data=data, layout=layout)
 plot_url = py.plot(fig, filename='style-annotation')
