--- a/_posts/pandas/callbacks-buttons/2015-04-09-button-bind.html
+++ b/_posts/pandas/callbacks-buttons/2015-04-09-button-bind.html
@@ -9,7 +9,7 @@ sitemap: false
 order: 0
 ---
 import plotly.plotly as py
-from plotly.graph_objs import *
+import plotly.graph_objs as go
 
 import numpy as np
 
@@ -22,11 +22,5 @@ for i, xi in enumerate(x):
         r2 = (xi**2+yj**2)
         z[i][j] = np.sin(xi)*np.cos(yj)*np.sin(r2)/(np.log(r2+1))
 
-data = Data([
-    Contour(
-        z=z,
-        x=x,
-        y=y
-    )
-])
+data = [go.Contour(z=z, x=x, y=y)]
 plot_url = py.plot(data, filename='simple-contour')
