--- a/_posts/pandas/choropleth-maps/2015-06-29-us-states-choropleth-map.html
+++ b/_posts/pandas/choropleth-maps/2015-06-29-us-states-choropleth-map.html
@@ -53,7 +53,7 @@ layout = dict(
             lakecolor = 'rgb(255, 255, 255)',
         ),
     )
-    
-fig = dict( data=data, layout=layout )
 
-url = py.plot( fig, validate=False, filename='d3-cloropleth-map' )
+fig = dict(data=data, layout=layout)
+
+url = py.plot(fig, filename='d3-cloropleth-map')
