--- a/_posts/pandas/contour/2015-06-23-contour-filled.html
+++ b/_posts/pandas/contour/2015-06-23-contour-filled.html
@@ -11,7 +11,7 @@ arrangement: horizontal
 # Find your api_key here: https://plot.ly/settings/api
 
 import plotly.plotly as py
-from plotly.graph_objs import *
+import plotly.graph_objs as go
 import pandas as pd
 import numpy as np
 import colorlover as cl
@@ -35,35 +35,30 @@ def kde_scipy( m1, m2 ):
     values = np.vstack([m1, m2])
     kernel = st.gaussian_kde(values)
     Z = np.reshape(kernel(positions).T, X.shape)
-    
+
     return Z
 
 scl = cl.scales['9']['seq']['Blues']
 colorscale = [ [ float(i)/float(len(scl)-1), scl[i] ] for i in range(len(scl)) ]
-colorscale
 
 Z = kde_scipy( virginica.SepalWidth, virginica.SepalLength )
-     
-data = Data([
-    Contour(
-        z=Z,
-        colorscale=colorscale,
-    ),        
-])
+
+data = [go.Contour(z=Z, colorscale=colorscale)]
 
 axis_layout = dict(
-     showgrid = False, zeroline = False, 
-     showticklabels = False, ticks = '' )
+    showgrid = False, zeroline = False,
+    showticklabels = False, ticks = ''
+)
 
-layout = Layout( 
-    width=650, 
-    height=600, 
+layout = go.Layout(
+    width=650,
+    height=600,
     autosize=False,
     xaxis = axis_layout,
     yaxis = axis_layout,
 )
 
-fig = Figure( data=data, layout=layout )
+fig = go.Figure( data=data, layout=layout )
 
 # IPython notebook
 # py.iplot(fig, filename='pandas-kde-contour-plot')
