--- a/_posts/pandas/heatmap/2015-04-09-0volcano-heatmap.html
+++ b/_posts/pandas/heatmap/2015-04-09-0volcano-heatmap.html
@@ -11,10 +11,11 @@ arrangement: horizontal
 # Find your api_key here: https://plot.ly/settings/api
 
 import plotly.plotly as py
-from plotly.graph_objs import *
+import plotly.graph_objs as go
+
 import pandas as pd
 df = pd.read_csv('https://raw.githubusercontent.com/plotly/datasets/master/volcano.csv')
 
-data = Data([Heatmap( z=df.values.tolist(), colorscale='Viridis' )])
+data = [go.Heatmap( z=df.values.tolist(), colorscale='Viridis')]
 
 py.iplot(data, filename='pandas-heatmap')
