--- a/_posts/pandas/histogram/2015-04-09-0basic-histogram.html
+++ b/_posts/pandas/histogram/2015-04-09-0basic-histogram.html
@@ -11,7 +11,7 @@ arrangement: horizontal
 # Find your api_key here: https://plot.ly/settings/api
 
 import plotly.plotly as py
-from plotly.graph_objs import *
+import plotly.graph_objs as go
 import pandas as pd
 import numpy as np # for generating random data
 
@@ -21,11 +21,7 @@ y = np.random.randn(N)
 df = pd.DataFrame({'x': x, 'y': y})
 df.head()
 
-data = [
-    Histogram(
-        y=df['y']
-    )    
-]
+data = [go.Histogram(y=df['y'])]
 
 # IPython notebook
 # py.iplot(data, filename='pandas/simple-histogram')
