--- a/_posts/pandas/horizontal-bar/2015-05-20-0simple-horizontal-bar.html
+++ b/_posts/pandas/horizontal-bar/2015-05-20-0simple-horizontal-bar.html
@@ -13,7 +13,7 @@ arrangement: horizontal
 import pandas as pd
 import numpy as np
 import plotly.plotly as py
-from plotly.graph_objs import *
+import plotly.graph_objs as go
 
 N = 20
 x = np.linspace(0, 1, N)
@@ -22,10 +22,10 @@ df = pd.DataFrame({'x': x, 'y': y})
 df.head()
 
 data = [
-    Bar(
+    go.Bar(
         x=df['y'], # assign x as the dataframe column 'x'
         y=df['x'],
-        orientation = 'h',        
+        orientation='h',
     )
 ]
 
