--- a/_posts/pandas/horizontal-bar/2015-05-20-1cufflinks-horizontal-bar.html
+++ b/_posts/pandas/horizontal-bar/2015-05-20-1cufflinks-horizontal-bar.html
@@ -15,6 +15,7 @@ arrangement: horizontal
 import plotly.plotly as py
 import cufflinks as cf
 import pandas as pd
+import numpy as np
 
 cf.set_config_file(offline=False, world_readable=True, theme='ggplot')
 
