more pandas updates

--- a/_posts/pandas/lines-on-maps/2015-07-02-globe-contour-lines.html
+++ b/_posts/pandas/lines-on-maps/2015-07-02-globe-contour-lines.html
@@ -35,10 +35,10 @@ for lat, lon in pairwise(df.columns):
         )
     ) )
     i = 0 if i+1 >= len(df.columns)/4 else i+1
-    
+
 layout = dict(
         title = 'Contour lines over globe&lt;br&gt;(Click and drag to rotate)',
-        showlegend = False,         
+        showlegend = False,
         geo = dict(
             showland = True,
             showlakes = True,
@@ -48,26 +48,26 @@ layout = dict(
             landcolor = 'rgb(230, 145, 56)',
             lakecolor = 'rgb(0, 255, 255)',
             oceancolor = 'rgb(0, 255, 255)',
-            projection = dict( 
+            projection = dict(
                 type = 'orthographic',
                 rotation = dict(
                     lon = -100,
                     lat = 40,
                     roll = 0
-                )            
+                )
             ),
-            lonaxis = dict( 
+            lonaxis = dict(
                 showgrid = True,
                 gridcolor = 'rgb(102, 102, 102)',
                 gridwidth = 0.5
             ),
-            lataxis = dict( 
+            lataxis = dict(
                 showgrid = True,
                 gridcolor = 'rgb(102, 102, 102)',
                 gridwidth = 0.5
             )
         )
     )
-    
+
 fig = dict( data=contours, layout=layout )
-url = py.plot( fig, validate=False, filename='d3-globe' )
+url = py.plot(fig, filename='d3-globe')
