--- a/_posts/pandas/time-series/2015-04-09-0basic-time-series.html
+++ b/_posts/pandas/time-series/2015-04-09-0basic-time-series.html
@@ -11,14 +11,14 @@ arrangement: horizontal
 # Find your api_key here: https://plot.ly/settings/api
 
 import plotly.plotly as py
-from plotly.graph_objs import *
+import plotly.graph_objas as go
 import pandas as pd
 
 df = pd.read_csv('https://raw.githubusercontent.com/plotly/datasets/master/2014_orange_stock.csv')
 df.head()
 
-trace = Scatter( x=df['AAPL_x'], y=df['AAPL_y'] )
-data = Data([trace])
+trace = go.Scatter( x=df['AAPL_x'], y=df['AAPL_y'] )
+data = [trace]
 
 # IPython notebook
 # py.iplot(data, filename='pandas-time-series')
