--- a/_posts/pandas/lines-on-maps/2015-07-01-nyc-london-great-circle.html
+++ b/_posts/pandas/lines-on-maps/2015-07-01-nyc-london-great-circle.html
@@ -45,4 +45,4 @@ layout = dict(
     )
 
 fig = dict( data=nyc_london, layout=layout )
-url = py.plot( fig, validate=False, filename='d3-great-circle' )
+url = py.plot( fig, filename='d3-great-circle' )
