--- a/_posts/pandas/polar/2015-04-09-polar-scatter.html
+++ b/_posts/pandas/polar/2015-04-09-polar-scatter.html
@@ -14,7 +14,7 @@ arrangement: horizontal
 import pandas as pd
 import numpy as np
 import plotly.plotly as py
-from plotly.graph_objs import *
+import plotly.graph_objs as go
 
 N = 100.0
 r = dict( r = [ np.random.poisson(N)*(np.cos((i/4)*np.pi/180)) for i in range(360) ] )
@@ -23,37 +23,37 @@ df_ma = pd.ewma(df,4.0)
 df_ma.head()
 
 data = []
-data.append( 
-    Scatter( 
-        t=df.index, 
-        r=df['r'], 
+data.append(
+    go.Scatter(
+        t=df.index,
+        r=df['r'],
         name = 'Scatter',
         mode='markers',
-        marker=Marker( 
+        marker=dict(
             color='rgb(255,78,252)',
             size=8 )
-    ) )  
-data.append(  
-    Scatter( 
-        t=df_ma.index, 
-        r=df_ma['r'], 
+    ) )
+data.append(
+    go.Scatter(
+        t=df_ma.index,
+        r=df_ma['r'],
         name = 'Moving average',
-        mode='lines', 
-        line=Line(color='rgb(69,124,235)'),
-        marker=Marker( 
-            color='rgb(69,124,235)', 
-            line=Line(width=2, 
+        mode='lines',
+        line=dict(color='rgb(69,124,235)'),
+        marker=dict(
+            color='rgb(69,124,235)',
+            line=Line(width=2,
             color='rgb(69,124,235)') ),
     ) )
-layout = Layout(
-    angularaxis=AngularAxis(
+layout = go.Layout(
+    angularaxis=dict(
         tickcolor='#CCC',
         showline=False,
     ),
     orientation=270
 )
 
-fig = Figure( data=data, layout=layout )
+fig = go.Figure(data=data, layout=layout)
 
 # IPython notebook
 # py.iplot(fig, filename='pandas-polar-chart')
