--- a/_posts/pandas/privacy/2015-04-09-privacy-true.html
+++ b/_posts/pandas/privacy/2015-04-09-privacy-true.html
@@ -10,12 +10,12 @@ sitemap: false
 # Find your api_key here: https://plot.ly/settings/api
 
 import plotly.plotly as py
-from plotly.graph_objs import *
+import plotly.graph_objs as go
 
-data = Data([
-    Scatter(
+data = [
+    go.Scatter(
         x=[0, 2, 4],
         y=[0, 4, 2]
     )
-])
+]
 plot_url = py.plot(data, filename='privacy-true', world_readable=True)
