--- a/_posts/pandas/wind-rose/2015-04-09-basic-wind-rose-chart.html
+++ b/_posts/pandas/wind-rose/2015-04-09-basic-wind-rose-chart.html
@@ -14,23 +14,23 @@ import pandas as pd
 import colorlover as cl
 import numpy as np
 import plotly.plotly as py
-from plotly.graph_objs import *
+import plotly.graph_objs as go
 
 df = pd.read_csv('https://raw.githubusercontent.com/plotly/datasets/master/wind_rose.csv')
 df.head()
 
 data = []
-counter = 0 
+counter = 0
 for col in df.columns:
-    if col != 'r':        
-        data.append( 
-            Area( t=df['r'], 
-                 r=df[col], 
-                 marker=Marker(color=cl.scales['9']['seq']['PuBu'][counter]),
-                 name=col+' m/s' ) ) 
+    if col != 'r':
+        data.append(
+            go.Area(t=df['r'],
+                    r=df[col],
+                    marker=dict(color=cl.scales['9']['seq']['PuBu'][counter]),
+                    name=col+' m/s' ) )
         counter+=1
-  
-fig = Figure( data = Data(data), layout = Layout(orientation=270, barmode='stack') )
+
+fig = Figure(data=data, layout=go.Layout(orientation=270, barmode='stack'))
 
 # IPython notebook
 # py.iplot(fig, filename='pandas-wind-rose-chart')
